--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -1,8 +1,8 @@
 $color-primary: #00c853;
 $color-primary-light: #5efc82;
 $color-primary-dark: #009624;
-$color-primary-text: black;
-$color-primary-bg: white;
+$color-primary-text: white;
+$color-primary-bg: black;
 
 $color-secondary: #4a148c;
 $color-secondary-light: #7c43bd;
