--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,6 +1,7 @@
 @import "reset.scss";
 @import "variables.scss";
 @import "typography.scss";
+@import "layout.scss";
 @import "theme.scss";
 
 @mixin rwd-above($min) {
