--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -9,3 +9,22 @@ $color-secondary-light: #7c43bd;
 $color-secondary-drak: #12005e;
 $color-secondary-text: white;
 $color-secondary-bg: #5efc82;
+
+
+button{
+    padding: 10px;
+    font-size: 1.5em;
+    border-radius: 8px;
+    background: $color-primary;
+    border: none;
+    font-weight: bold;
+    color:white;
+    cursor: pointer;
+    &:hover{
+        background: $color-primary-dark;
+    }
+    &:active{
+        background:black;
+    }
+    box-shadow: 0px 3px 3px rgba(0,0,0,.3);
+}
