--- a/src/style/layout.scss
+++ b/src/style/layout.scss
@@ -1,13 +1,24 @@
-.row{
+.row {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+    box-sizing: border-box;
 }
 
-@for $i from 1 through 12{
-    .col-#{$i}{
+@for $i from 1 through 12 {
+
+    .col-#{$i},.col-#{$i}-md,.col-#{$i}-lg {
         width: 100%*$i/12;
         padding: 8px;
-        box-sizing:border-box;
+        box-sizing: border-box;
+
+       
+    }
+
+    .col-#{$i}-md{
+        @include rwd-below(768px){
+            width: 100%;
+            padding: 0;
+        }
     }
 }
