--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -27,4 +27,11 @@ button{
         background:black;
     }
     box-shadow: 0px 3px 3px rgba(0,0,0,.3);
+
+    &[disabled]{
+        background: transparent;
+        color: gray;
+        border: solid 1px gray;
+        pointer-events: none;
+    }
 }
